          to gcn_server.pl, test_templates.pl, test_servers.pl and the UA
          and JACH Handler.pm modules. Also changed things so emails are
	  sent from estar@astro.ex.ac.uk rather than aa@astro.ex.ac.uk

	* eSTAR/Mail.pm: removed automatic Cc to aa@astro.ex.ac.uk, as all
          current messages are now getting Cc'd to estar-status

2006-03-23 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/ogle_fetch.pl: Fixed to default to observation request to run 
          from now till 13 hours (not 12 hours) later. 
          
2006-03-21 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/event_broker.pl: Changed default RAPTOR socket to connect
          to the STC version of their feed.
          
        * bin/ogle_fetch.pl: Fixed to default to observation request in UTC, 
          from now till 12 hours later. Set tolerance multiplier to 0.95
          
        * bin/ogle_parsemail.pl: Fixed to generate semi-1.1 compliant messages 
          
        * eSTAR/UA/Handler.pm: Fixed default start/end time handling
            
2006-03-08 Alasdair Allan <aa@astro.ex.ac.uk>

	* eSTAR/Broker/Handler.pm: Added proper ACK message response to 
	  message submission to broker via the SOAP server.
	  
	* bin/event_broker.pl: Wrapped the initial 4 byte sysread calls
	  with an eval and $SIG{ALRM} to try and catch any timeouts. It'll
	  drop the socket connection if it times out on the read.  

2006-03-07 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/event_broker.pl: Added SOAP server, this will have a method
	  which will allow us to injecct VOEvent messages into the broker,
	  efectively making the Broker a publisher. This will be the default
	  publication route for eSTAR native messages.
	  
	* eSTAR/Broker/Handler.pm: Added standard skeleton and additionally a
	  handle_voevent() callback to take an "event", parse and ship to the
	  running hash of the broker.
	  	
	* eSTAR/Broker/SOAP/Daemon.pm: Threaded SOAP daemon.
	